deployments/barricade/base/barricade.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: barricade
  namespace: auth
  labels:
    app: barricade
spec:
  replicas: 1
  selector:
    matchLabels:
      app: barricade
  template:
    metadata:
      name: barricade
      labels:
        app: barricade
    spec:
      containers:
        - name: barricade
          image: ghcr.io/vaynerakawalo/barricade:CD-202605072033-246c8cd # {"$imagepolicy": "flux-system:barricade-policy"}
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              protocol: TCP
      restartPolicy: Always
