deployments/barricade/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: barricade
  namespace: auth
spec:
  selector:
    app: barricade
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
