deployments/barricade/base/auth-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: auth-route
  namespace: auth
spec:
  parentRefs:
    - name: envoy-gateway
      sectionName: https
      kind: Gateway
      namespace: infra

  hostnames:
    - auth.blamedevs.com

  rules:
    - backendRefs:
        - name: barricade
          port: 8080
      matches:
        - path:
            type: PathPrefix
            value: /api
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              replacePrefixMatch: /
              type: ReplacePrefixMatch

    - backendRefs:
        - name: barricade
          port: 8080
      matches:
        - path:
            type: PathPrefix
            value: /.well-known/

    - backendRefs:
        - name: auth-ui
          port: 80
